[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vexis-agt-adapter"
version = "0.1.0"
description = "VEXIS ↔ Microsoft Agent Governance Toolkit bridge — centralized policies, local enforcement, unified audit trails"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "VEXIS", email = "sdk@vexis.io" }]
keywords = ["vexis", "microsoft", "agt", "agent-governance", "policy-engine", "audit-trail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "vexis-sdk>=0.5.0",
]

[project.urls]
Homepage = "https://vexis.io"
Documentation = "https://docs.vexis.io/integrations/microsoft-agt"
Repository = "https://github.com/disruptivetrends/vexis-agt-adapter"

[tool.hatch.build.targets.wheel]
packages = ["vexis_agt"]
