[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palveron-agt"
version = "1.1.0"
description = "Palveron adapter for Microsoft Agent Governance Toolkit (AGT) — enforce Palveron governance policies locally in AutoGen and LangChain agent pipelines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Palveron", email = "hello@palveron.com" }]
keywords = [
    "palveron",
    "microsoft-agt",
    "agent-governance-toolkit",
    "ai-governance",
    "guardrails",
    "autogen",
    "langchain",
    "policy-enforcement",
    "compliance",
    "audit-trail",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "palveron-sdk>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.5", "build"]

[project.urls]
Homepage = "https://palveron.com"
Documentation = "https://docs.palveron.com/integrations/microsoft-agt"
Repository = "https://github.com/palveron/adapter-agt"
Issues = "https://github.com/palveron/adapter-agt/issues"
Changelog = "https://github.com/palveron/adapter-agt/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["palveron_agt"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
strict = true
python_version = "3.10"
